real_estate_analysis/k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: real-estate-db
spec:
  selector:
    app: real-estate-db
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  type: ClusterIP
